k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eks-demo
  labels:
    name: eks-demo
